data/derived/sp14/progs/unify/prog1386.ml.out
Characters 28-80:
  let fixpoint (f,b) = wwhile (fun x -> if (x=b) then (b,false) else (f x,true),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
